--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -122,7 +122,7 @@ nightly-generate-last-commit: &nightly-generate-last-commit
   run:
     name: Generate Nightly Skip File
     command: |
-      mkdir ~/.pride-nightly
+      mkdir -p ~/.pride-nightly
       git rev-parse HEAD > ~/.pride-nightly/last-commit
 
 android-secrets: &android-secrets
