--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -563,7 +563,7 @@ workflows:
   nightly-release:
     triggers:
       - schedule:
-          cron: "0 * * * *"
+          cron: "0 0 * * *"
           filters:
             branches:
               only:
