--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -339,7 +339,9 @@ jobs:
                 bundle exec fastlane release \
                 submit:true \
                 apk_path:$APK_PATH \
-                upload_key:$PLAY_STORE_UPLOAD_KEY_PATH
+                upload_key:$PLAY_STORE_UPLOAD_KEY_PATH \
+                ci_build_num:$CIRCLE_BUILD_NUM \
+                slack_webhook:$SLACK_WEBHOOK
       - <<: *bugsnag-upload-sourcemaps-android
 
   alpha-ios:
@@ -440,7 +442,8 @@ jobs:
                 submit:true \
                 ci_build_num:$CIRCLE_BUILD_NUM \
                 release_stage:$RELEASE_STAGE \
-                bugsnag_api_key:$BUGSNAG_API_KEY
+                bugsnag_api_key:$BUGSNAG_API_KEY \
+                slack_webhook:$SLACK_WEBHOOK
       - <<: *bugsnag-upload-sourcemaps-ios
 
   e2e-ios:
