run nightly job only on master

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -570,6 +570,6 @@ workflows:
           filters:
             branches:
               only:
-                - nightly-builds
+                - master
     jobs:
       - test-nightly
