--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -226,6 +226,19 @@ bugsnag-upload-sourcemaps-ios: &bugsnag-upload-sourcemaps-ios
         $BUGSNAG_API_KEY
     working_directory: /Users/distiller/project
 
+generate-nightly-file: &generate-nightly-file
+  run:
+    name: Generate Nightly Last Commit File
+    command: |
+        mkdir -p ~/.pride-nightly
+        git rev-parse HEAD > ~/.pride-nightly/last-commit
+
+generate-nightly-cache: &generate-nightly-cache
+  run:
+    name: Generate Nightly Cache
+    command: |
+        mkdir -p ~/.pride-nightly/cache
+        cp ~/.pride-nightly/last-commit ~/.pride-nightly/cache/
 
 version: 2
 jobs:
@@ -500,11 +513,7 @@ jobs:
       <<: *env-macos
     steps:
       - <<: *checkout-macos
-      - run:
-          name: Generate Nightly Last Commit File
-          command: |
-              mkdir -p ~/.pride-nightly
-              git rev-parse HEAD > ~/.pride-nightly/last-commit
+      - <<: *generate-nightly-file
       - <<: *restore-nightly-cache
       - run:
           name: Run if not run before
@@ -514,11 +523,7 @@ jobs:
               else
                 echo "build not needed..."
               fi
-      - run:
-          name: Generate Nightly Cache
-          command: |
-              mkdir -p ~/.pride-nightly/cache
-              cp ~/.pride-nightly/last-commit ~/.pride-nightly/cache/
+      - <<: *generate-nightly-cache
       - <<: *save-nightly-cache
 
 workflows:
