--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ yarn-key: &yarn-key
 yarn-key-macos: &yarn-key-macos
   v3-dependencies-macos-{{ checksum "/Users/distiller/project/yarn.lock" }}
 npm-key-macos-e2e: &npm-key-macos-e2e
-  v3-dependencies-macos-e2e-{{ checksum "/Users/distiller/project/package.json" }}
+  v3-dependencies-macos-e2e-{{ checksum "/Users/distiller/project/yarn.lock" }}
 gradle-key: &gradle-key
   v1-jars-{{ checksum "gradle/wrapper/gradle-wrapper.properties" }}-{{ checksum "build.gradle" }}-{{ checksum "app/build.gradle" }}
 gems-key: &gems-key
@@ -33,16 +33,6 @@ save-yarn-cache-macos: &save-yarn-cache-macos
     paths:
       - /Users/distiller/project/node_modules
     key: *yarn-key-macos
-
-# Detox doesn't play well with Yarn
-get-npm-cache-macos-e2e: &get-npm-cache-macos-e2e
-  restore_cache:
-    key: *npm-key-macos-e2e
-save-npm-cache-macos-e2e: &save-npm-cache-macos-e2e
-  save_cache:
-    paths:
-      - /Users/distiller/project/node_modules
-    key: *npm-key-macos-e2e
 
 restore-gradle-cache: &restore-gradle-cache
   restore_cache:
@@ -81,13 +71,6 @@ yarn-dependencies-macos: &yarn-dependencies-macos
   run:
     name: Install dependencies with Yarn
     command: yarn install
-    working_directory: /Users/distiller/project
-
-# Detox doesn't play well with Yarn
-npm-dependencies-macos-e2e: &npm-dependencies-macos-e2e
-  run:
-    name: Install dependencies with npm
-    command: npm install
     working_directory: /Users/distiller/project
 
 ruby-dependencies: &ruby-dependencies
@@ -474,9 +457,9 @@ jobs:
           command: |
               npm i -g detox-cli
               npm i -g react-native-cli
-      - <<: *get-npm-cache-macos-e2e
-      - <<: *npm-dependencies-macos-e2e
-      - <<: *save-npm-cache-macos-e2e
+      - <<: *get-yarn-cache-macos
+      - <<: *yarn-dependencies-macos
+      - <<: *save-yarn-cache-macos
       - <<: *generate-env-macos
       - run: npm run test:e2e:release
       - store_artifacts:
