--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.1"
   },
   "devDependencies": {
     "@rgbboy/testcheck": "^1.0.0-rc.3",
