--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-linear-gradient": "^2.4.0",
     "react-native-map-link": "^1.0.6",
     "react-native-maps": "^0.21.0",
+    "react-native-permissions": "^1.1.1",
     "react-native-safe-area-view":
       "robbiemccorkell/react-native-safe-area-view",
     "react-native-splash-screen": "^3.0.6",
