--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="org.prideinlondon.festival">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -7,7 +8,8 @@
 
     <application
       android:name=".MainApplication"
-      android:allowBackup="true"
+      tools:replace="android:allowBackup"
+      android:allowBackup="false"
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
       android:theme="@style/AppTheme">
