--- a/ios/PrideLondonApp/Info.plist
+++ b/ios/PrideLondonApp/Info.plist
@@ -63,6 +63,22 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Your current location will be displayed on the map and used to show nearby events. You can always change it in your Settings.</string>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>$(PRODUCT_NAME) bluetooth usage</string>
+	<key>NSCalendarsUsageDescription</key>
+	<string>$(PRODUCT_NAME) calendars usage</string>
+	<key>NSCameraUsageDescription</key>
+	<string>$(PRODUCT_NAME) camera usage</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>$(PRODUCT_NAME) photo usage</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>$(PRODUCT_NAME) photo library use</string>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>$(PRODUCT_NAME) speech recognition usage</string>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>$(PRODUCT_NAME) apple music usage</string>
+	<key>NSMotionUsageDescription</key>
+	<string>$(PRODUCT_NAME) motion usage</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Poppins-Bold.ttf</string>
