--- a/package.json
+++ b/package.json
@@ -125,7 +125,7 @@
         "binaryPath":
           "ios/build/Build/Products/Debug-iphonesimulator/PrideLondonApp.app",
         "build":
-          "xcodebuild -project ios/PrideLondonApp.xcodeproj -scheme PrideLondonApp -configuration Debug -sdk iphonesimulator -derivedDataPath ios/build",
+          "xcodebuild -project ios/PrideLondonApp.xcodeproj -scheme PrideLondonApp -configuration Debug -sdk iphonesimulator -derivedDataPath ios/build -quiet",
         "type": "ios.simulator",
         "name": "iPhone 7"
       },
@@ -133,7 +133,7 @@
         "binaryPath":
           "ios/build/Build/Products/Release-iphonesimulator/PrideLondonApp.app",
         "build":
-          "xcodebuild -project ios/PrideLondonApp.xcodeproj -scheme PrideLondonApp -configuration Release -sdk iphonesimulator -derivedDataPath ios/build",
+          "xcodebuild -project ios/PrideLondonApp.xcodeproj -scheme PrideLondonApp -configuration Release -sdk iphonesimulator -derivedDataPath ios/build -quiet",
         "type": "ios.simulator",
         "name": "iPhone 7"
       }
