--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -459,6 +459,10 @@ jobs:
     steps:
       - <<: *checkout-macos
       - <<: *set-ruby-version-macos
+      - run:
+          name: Install xcpretty
+          command: |
+            gem install xcpretty
       # Not using a workspace here as Node and Yarn versions
       # differ between the macOS image and the Docker containers above.
       - <<: *fabric-secrets-ios
