--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
       "detox test -c ios.sim.debug --loglevel verbose --debug-synchronization 1000",
     "test:e2e:build": "detox build -c ios.sim.debug",
     "test:e2e:release":
-      "detox build -c ios.sim.release && detox test -c ios.sim.release --loglevel verbose --debug-synchronization 1000",
+      "detox build -c ios.sim.release && detox test -c ios.sim.release",
     "precommit": "lint-staged",
     "lint": "eslint src",
     "flow": "flow src",
