--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "ramda": "^0.25.0",
     "react": "16.3.1",
     "react-native": "0.55.4",
+    "react-native-accessible-selectable": "^0.1.0",
     "react-native-calendars": "^1.17.4",
     "react-native-communications": "^2.2.1",
     "react-native-config": "^0.11.5",
