--- a/package.json
+++ b/package.json
@@ -6,17 +6,13 @@
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "run-ios": "node node_modules/react-native/local-cli/cli.js run-ios",
-    "run-android":
-      "node node_modules/react-native/local-cli/cli.js run-android --appId org.prideinlondon.festival.dev --variant devDebug",
+    "run-android": "node node_modules/react-native/local-cli/cli.js run-android --appId org.prideinlondon.festival.dev --variant devDebug",
     "test": "TZ=UTC jest src --maxWorkers=2",
     "test:e2e": "yarn test:e2e:build && yarn test:e2e:run",
-    "test:e2e:dev":
-      "detox test -c ios.sim.debug --reuse --loglevel verbose --debug-synchronization 1000",
-    "test:e2e:run":
-      "detox test -c ios.sim.debug --loglevel verbose --debug-synchronization 1000",
+    "test:e2e:dev": "detox test -c ios.sim.debug --reuse --loglevel verbose --debug-synchronization 1000",
+    "test:e2e:run": "detox test -c ios.sim.debug --loglevel verbose --debug-synchronization 1000",
     "test:e2e:build": "detox build -c ios.sim.debug",
-    "test:e2e:release":
-      "detox build -c ios.sim.release && detox test -c ios.sim.release",
+    "test:e2e:release": "detox build -c ios.sim.release && detox test -c ios.sim.release",
     "precommit": "lint-staged",
     "lint": "eslint src",
     "flow": "flow src",
@@ -43,8 +39,7 @@
     "react-native-map-link": "^1.0.6",
     "react-native-maps": "^0.21.0",
     "react-native-permissions": "^1.1.1",
-    "react-native-safe-area-view":
-      "robbiemccorkell/react-native-safe-area-view",
+    "react-native-safe-area-view": "robbiemccorkell/react-native-safe-area-view",
     "react-native-splash-screen": "^3.0.6",
     "react-navigation": "^2.0.1",
     "react-redux": "^5.0.7",
@@ -85,7 +80,7 @@
     "lint-staged": "^7.2.0",
     "lorem-ipsum": "^1.0.5",
     "markdown-toc": "^1.2.0",
-    "prettier": "^1.10.2",
+    "prettier": "^1.13.7",
     "react-dom": "^16.2.0",
     "react-native-mock": "^0.3.1",
     "react-native-schemes-manager": "^1.0.1",
@@ -97,12 +92,16 @@
     "react-native-safe-area-view": "robbiemccorkell/react-native-safe-area-view"
   },
   "rnpm": {
-    "assets": ["./assets/fonts/"]
+    "assets": [
+      "./assets/fonts/"
+    ]
   },
   "jest": {
     "preset": "react-native",
     "setupTestFrameworkScriptFile": "<rootDir>src/setup-tests.js",
-    "snapshotSerializers": ["enzyme-to-json/serializer"],
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ],
     "transformIgnorePatterns": [
       "node_modules/(?!(jest-)?react-native|react-navigation)"
     ],
@@ -112,30 +111,35 @@
     "collectCoverage": true
   },
   "lint-staged": {
-    "*.{js,json,css,md}": ["prettier --write", "git add"],
-    "./README.md": ["markdown-toc -i", "git add"]
+    "*.{js,json,css,md}": [
+      "prettier --write",
+      "git add"
+    ],
+    "./README.md": [
+      "markdown-toc -i",
+      "git add"
+    ]
   },
   "xcodeSchemes": {
     "Debug": [],
-    "Release": ["AdhocAlpha", "AdhocBeta"]
+    "Release": [
+      "AdhocAlpha",
+      "AdhocBeta"
+    ]
   },
   "detox": {
     "test-runner": "jest",
     "runner-config": "e2e/config.json",
     "configurations": {
       "ios.sim.debug": {
-        "binaryPath":
-          "ios/build/Build/Products/Debug-iphonesimulator/PrideLondonApp.app",
-        "build":
-          "xcodebuild -project ios/PrideLondonApp.xcodeproj -scheme PrideLondonApp -configuration Debug -sdk iphonesimulator -derivedDataPath ios/build -quiet | xcpretty",
+        "binaryPath": "ios/build/Build/Products/Debug-iphonesimulator/PrideLondonApp.app",
+        "build": "xcodebuild -project ios/PrideLondonApp.xcodeproj -scheme PrideLondonApp -configuration Debug -sdk iphonesimulator -derivedDataPath ios/build -quiet | xcpretty",
         "type": "ios.simulator",
         "name": "iPhone 7"
       },
       "ios.sim.release": {
-        "binaryPath":
-          "ios/build/Build/Products/Release-iphonesimulator/PrideLondonApp.app",
-        "build":
-          "xcodebuild -project ios/PrideLondonApp.xcodeproj -scheme PrideLondonApp -configuration Release -sdk iphonesimulator -derivedDataPath ios/build -quiet | xcpretty",
+        "binaryPath": "ios/build/Build/Products/Release-iphonesimulator/PrideLondonApp.app",
+        "build": "xcodebuild -project ios/PrideLondonApp.xcodeproj -scheme PrideLondonApp -configuration Release -sdk iphonesimulator -derivedDataPath ios/build -quiet | xcpretty",
         "type": "ios.simulator",
         "name": "iPhone 7"
       }
