--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "test:e2e:dev":
       "detox test -c ios.sim.debug --reuse --record-logs failing --take-screenshots failing",
     "test:e2e:run":
-      "detox test -c ios.sim.debug --record-logs failing --record-videos failing --take-screenshots failing",
+      "detox test -c ios.sim.debug --record-logs failing --take-screenshots failing",
     "test:e2e:build": "detox build -c ios.sim.debug",
     "test:e2e:release":
-      "detox build -c ios.sim.release && detox test -c ios.sim.release --record-logs all --record-videos all --take-screenshots all",
+      "detox build -c ios.sim.release && detox test -c ios.sim.release --record-logs failing --take-screenshots failing",
     "precommit": "lint-staged",
     "lint": "eslint src",
     "flow": "flow src",
