--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
       "detox test -c ios.sim.debug --record-logs failing --take-screenshots failing",
     "test:e2e:build": "detox build -c ios.sim.debug",
     "test:e2e:release":
-      "detox build -c ios.sim.release && detox test -c ios.sim.release --record-logs all --take-screenshots all",
+      "detox build -c ios.sim.release && detox test -c ios.sim.release --record-logs failing --take-screenshots failing",
     "precommit": "lint-staged",
     "lint": "eslint src",
     "flow": "flow src",
