renaming MessageBanner methods plus cleaning up tests

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -16,8 +16,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.3'
-
+        classpath "com.android.tools.build:gradle:${versions.gradleBuildTools}"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
