--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -74,20 +74,10 @@ import com.android.build.OutputFile
  */
 
 project.ext.react = [
-    entryFile: "index.js",
-    inputExcludes: ["ios/**", "*.test.*"]
+    entryFile: "index.js"
 ]
 
-/**
- * Until we upgraded react-native to a version, which includes this PR
- * we need to use this react.gradle file, which was copied from the PR:
- * https://github.com/facebook/react-native/pull/17967
- *
- * Once this is officially included in react-native we can revert back
- * to this and delete the react.gradle file:
- * apply from: "../../node_modules/react-native/react.gradle"
- */
-apply from: "../react.gradle"
+apply from: "../../node_modules/react-native/react.gradle"
 
 /**
  * Set this to true to create two separate APKs instead of one:
@@ -113,15 +103,14 @@ if (file("../.gradle/gradle.properties").exists()) {
     file("../.gradle/gradle.properties").withReader { props.load(it) }
     androidVersionCode = props['versionCode'].toInteger()
 }
-
 android {
-    compileSdkVersion versions.compileSdk
-    buildToolsVersion versions.buildTools
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
         applicationId "org.prideinlondon.festival"
-        minSdkVersion versions.minSdk
-        targetSdkVersion versions.targetSdk
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode androidVersionCode
         versionName "2.0.3"
         ndk {
@@ -236,8 +225,8 @@ dependencies {
 
     implementation project(':react-native-config')
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "com.android.support:appcompat-v7:${versions.supportLibrary}"
-    implementation "com.facebook.react:react-native:0.55.4"  // From node_modules
+    implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
+    implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation('com.crashlytics.sdk.android:crashlytics:2.9.3@aar') {
         transitive = true
     }
