--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,22 +1,20 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.versions = [
-        minSdk: 16,
-        compileSdk: 27,
-        targetSdk: 27,
-        buildTools: '27.0.3',
-        gradleBuildTools: '3.0.1',
-        supportLibrary: '27.1.0'
-    ]
-
-    repositories {
-        google()
-        jcenter()
+    ext {
+        buildToolsVersion = "27.0.3"
+        minSdkVersion = 16
+        compileSdkVersion = 27
+        targetSdkVersion = 26
+        supportLibVersion = "27.1.1"
     }
-
+    repositories {
+        jcenter()
+        google()
+    }
     dependencies {
-        classpath "com.android.tools.build:gradle:${versions.gradleBuildTools}"
+        classpath 'com.android.tools.build:gradle:3.1.4'
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -25,11 +23,17 @@ buildscript {
 allprojects {
     repositories {
         mavenLocal()
-        google()
         jcenter()
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url "$rootDir/../node_modules/react-native/android"
         }
+        google()
     }
+}
+
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '4.4'
+    distributionUrl = distributionUrl.replace("bin", "all")
 }
