--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "@babel/plugin-external-helpers": "^7.2.0",
     "@rgbboy/testcheck": "^1.0.0-rc.3",
     "babel-eslint": "^8.2.5",
-    "babel-jest": "23.2.0",
+    "babel-jest": "23.6.0",
     "bugsnag-sourcemaps": "^1.0.3",
     "commander": "^2.16.0",
     "contentful-management": "^5.1.4",
@@ -73,21 +73,21 @@
     "eslint-plugin-react": "^7.9.1",
     "eslint-plugin-react-native": "^3.2.1",
     "flow-bin": "^0.78.0",
-    "flow-typed": "^2.3.0",
+    "flow-typed": "^2.5.1",
     "glow": "^1.2.2",
     "husky": "^0.14.3",
-    "jest": "23.2.0",
-    "jest-each": "^23.2.0",
+    "jest": "23.6.0",
+    "jest-each": "^23.6.0",
     "lint-staged": "^7.2.0",
     "lorem-ipsum": "^1.0.5",
     "markdown-toc": "^1.2.0",
     "metro-react-native-babel-preset": "^0.48.5",
     "prettier": "^1.13.7",
-    "react-dom": "^16.2.0",
+    "react-dom": "^16.6.3",
     "react-native-mock": "^0.3.1",
     "react-native-schemes-manager": "^1.0.1",
     "react-native-version": "^2.6.2",
-    "react-test-renderer": "16.2.0",
+    "react-test-renderer": "16.6.3",
     "redux-mock-store": "^1.5.3",
     "schedule": "0.4.0"
   },
@@ -102,6 +102,9 @@
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
     ],
+    "transform": {
+      "^.+\\.(js)$": "<rootDir>/node_modules/react-native/jest/preprocessor.js"
+    },
     "transformIgnorePatterns": [
       "node_modules/(?!(jest-)?react-native|react-navigation)"
     ],
