--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "run-ios": "node node_modules/react-native/local-cli/cli.js run-ios",
     "run-android": "node node_modules/react-native/local-cli/cli.js run-android --appId org.prideinlondon.festival.dev --variant devDebug",
-    "test": "TZ=UTC jest src --maxWorkers=2",
+    "test": "TZ=UTC jest src --maxWorkers=2 --no-cache",
     "test:e2e": "yarn test:e2e:build && yarn test:e2e:run",
     "test:e2e:dev": "detox test -c ios.sim.debug --reuse --record-logs failing --take-screenshots failing",
     "test:e2e:run": "detox test -c ios.sim.debug --record-logs failing --take-screenshots failing",
@@ -54,6 +54,7 @@
     "@rgbboy/testcheck": "^1.0.0-rc.3",
     "babel-eslint": "^8.2.5",
     "babel-jest": "23.6.0",
+    "babel-plugin-jest-hoist": "^23.2.0",
     "bugsnag-sourcemaps": "^1.0.3",
     "commander": "^2.16.0",
     "contentful-management": "^5.1.4",
